--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
+    "uuid": "^3.0.0",
     "webpack": "^1.12.13"
   }
 }
