--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git@github.com:tjscollins/game-of-life.git"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "express": "^4.14.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
